# Vent-Engine

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: pull_reqeust.yml  rust.yml
crates/vent-assets/: Cargo.toml  README.md
crates/vent-assets/src/: image.rs  lib.rs  mesh.rs  model.rs  pool.rs  resource.rs  shader.rs  texture.rs
crates/vent-assets/src/io/: file.rs  mod.rs
crates/vent-assets/src/model/: gltf.rs  loader.rs  mod.rs  obj.rs  optimizer.rs
crates/vent-common/: Cargo.toml  README.md
crates/vent-common/src/: lib.rs  window.rs
crates/vent-common/src/component/: mod.rs
crates/vent-common/src/components/: camera_controller3d.rs
crates/vent-common/src/entity/: camera.rs
crates/vent-common/src/project/: mod.rs
crates/vent-common/src/render/: mod.rs  texture.rs
crates/vent-common/src/render/model/: mod.rs  model_loader.rs
crates/vent-common/src/util/crash/: mod.rs
crates/vent-common/src/world/: mod.rs
crates/vent-dev/: Cargo.toml
crates/vent-dev/src/utils/: stopwatch.rs
crates/vent-ecs/: Cargo.toml  README.md
crates/vent-ecs/src/: archetype.rs  lib.rs
crates/vent-ecs/src/component/: input_component.rs  mod.rs
crates/vent-ecs/src/entity/: mod.rs
crates/vent-ecs/src/world/: mod.rs
crates/vent-editor/: Cargo.toml  README.md
crates/vent-editor/src/: main.rs
crates/vent-editor/src/gui/: mod.rs
crates/vent-editor/src/render/: gui_renderer.rs  mod.rs  runtime_renderer.rs
crates/vent-logging/: Cargo.toml
crates/vent-logging/src/: lib.rs
crates/vent-math/: Cargo.toml
crates/vent-math/src/: align16.rs  deref.rs  lib.rs
crates/vent-math/src/scalar/: mat4.rs  mod.rs  quat.rs
crates/vent-math/src/vec/: mod.rs  vec2.rs  vec3.rs  vec4.rs
crates/vent-math/src/vec/i32/: ivec2.rs  mod.rs
crates/vent-rendering/: Cargo.toml
crates/vent-rendering/src/: allocator.rs  buffer.rs  cache.rs  debug.rs  image.rs  instance.rs  lib.rs  mesh.rs  pipeline.rs  surface.rs  vertex.rs
crates/vent-runtime/: Cargo.toml  README.md  build.rs
crates/vent-runtime/assets/shaders/app/2D/: gui.frag  gui.frag.spv
crates/vent-runtime/assets/shaders/app/3D/: light.frag  light.frag.spv  light.vert  light.vert.spv  shader.frag  shader.frag.spv  shader.wgsl  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
crates/vent-runtime/res/shaders/app/3D/: light.frag  light.frag.spv  light.vert  light.vert.spv  light.wgsl  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader.wgsl  wireframe.wgsl
crates/vent-runtime/src/: lib.rs  main.rs
crates/vent-runtime/src/project/: mod.rs
crates/vent-runtime/src/render/: app_renderer.rs  mesh_renderer.rs  mod.rs  model.rs  model_renderer.rs
crates/vent-runtime/src/render/camera/: camera_controller3d.rs  mod.rs
crates/vent-runtime/src/render/d2/: mod.rs
crates/vent-runtime/src/render/d3/: light_renderer.rs  mod.rs  skybox_renderer.rs
crates/vent-runtime/src/render/gui/: debug_gui.rs  gui_renderer.rs  mod.rs
crates/vent-runtime/src/util/: crash.rs  input_handler.rs  mod.rs  version.rs
crates/vent-sdk/: Cargo.toml
crates/vent-sdk/src/utils/: mod.rs  stopwatch.rs
crates/vent-ui/: Cargo.toml  build.rs
crates/vent-ui/assets/shaders/: gui.frag  gui.frag.spv  gui.vert  gui.vert.spv  shader.frag  shader.frag.spv  shader.vert
crates/vent-ui/src/: lib.rs  renderer.rs
crates/vent-ui/src/font/: ab_glyph.rs  cosmic.rs  freetype.rs  loader.rs  mod.rs
crates/vent-window/: Cargo.toml  README.md
crates/vent-window/src/: keyboard.rs  lib.rs  mouse.rs
crates/vent-window/src/platform/: mod.rs
crates/vent-window/src/platform/wayland/: mod.rs
crates/vent-window/src/platform/windows/: mod.rs
test/runtime-sandbox/: Cargo.toml  project.vent
test/runtime-sandbox/src/: main.rs
vent-common/: Cargo.toml
vent-common/src/: lib.rs  window.rs
vent-common/src/component/: input_component.rs  mod.rs
vent-common/src/component/components/: camera_controller3d.rs  mod.rs
vent-common/src/components/: camera_controller3d.rs  mod.rs
vent-common/src/entities/: camera.rs  mod.rs
vent-common/src/entity/: camera.rs
vent-common/src/project/: mod.rs
vent-common/src/render/: mod.rs
vent-common/src/render/model/: mod.rs  model_loader.rs
vent-common/src/util/: mod.rs
vent-common/src/util/crash/: mod.rs
vent-common/src/world/: mod.rs
vent-editor/: Cargo.toml
vent-editor/src/: lib.rs  main.rs
vent-editor/src/gui/: mod.rs
vent-editor/src/render/: gui_renderer.rs  mod.rs  runtime_renderer.rs
vent-runtime/: Cargo.toml
vent-runtime/assets/shaders/app/3D/: shader.wgsl
vent-runtime/src/: lib.rs  main.rs
vent-runtime/src/render/: app_renderer.rs  mesh_renderer.rs  mod.rs
vent-runtime/test/: cube.rs
