[package]
name = "vent-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-runtime = { path = "../vent-runtime"}
vent-common = { path = "../vent-common"}

imgui = "0.10"
imgui-winit-support = { version = "0.10"  }
imgui-wgpu = "0.22.0"

winit = "0.27.1"
wgpu = "0.15.1"
pollster = "0.3.0"