[package]
name = "vent-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-runtime = { path = "../vent-runtime"}
vent-common = { path = "../vent-common"}

egui = "0.21.0"
egui_dock = "0.4.0"
native-dialog = "0.6.3"

egui_wgpu_backend = { git = "https://github.com/zmarlon/egui_wgpu_backend" }
egui_winit_platform = { git = "https://github.com/zmarlon/egui_winit_platform" }

winit = "0.28.2"
wgpu = "0.15.1"
pollster = "0.3.0"