[package]
name = "vent-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-sdk = { path = "../vent-sdk" }

wgpu = "0.18.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
log = "0.4"
cfg-if = "1"

# model
tobj = { version = "4.0.0", features = ["async"] }
gltf = "1.3.0"

image = "0.24.7"
