[package]
name = "vent-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-sdk = { path = "../vent-sdk" }
vent-rendering = { path = "../vent-rendering"}

ordered-float = "4.2.0"

image = "0.25"

log = "0.4"

ash = { version= "0.38", default-features = false, features = ["linked"] }

# model
tobj = { version = "4.0.0", features = ["async"] }
gltf = "1.4.0"

