[package]
name = "vent-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-sdk = { path = "../vent-sdk" }
vent-rendering = { path = "../vent-rendering"}

ordered-float = "4.3.0"

image = "0.25"

log = "0.4"

ash = { version= "0.38", default-features = false }

# model is development and we often need features/changes which are not published yet
modelz = { git = "https://github.com/ventengine/Modelz.git" }

