[package]
name = "vent-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-ecs = { path = "../vent-ecs"}

winit = "0.28.5"
wgpu = "0.16.0"
pollster = "0.3.0"

glam = "0.24.0"
image = "0.24.5"
bytemuck = { version = "1.13.0", features = ["derive"] }

log = "0.4.17"
russimp = { version = "2.0.4", features = ["prebuilt"] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rfd = "0.11.2"

[target.'cfg(any(not(target_arch = "wasm32"), target_os = "emscripten"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.15.1", features = ["webgl"]}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Window",
    "Element",
    "Location"
]}