[package]
name = "vent-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-runtime = { path = "../vent-runtime"}
vent-common = { path = "../vent-common"}

vent-rendering = { path = "../vent-rendering"}

ash = { version= "0.38", default-features = false, features = ["linked", "debug"] }

# egui
egui = "0.27"
egui_dock = "0.12"

winit = "0.30"
pollster = "0.3.0"

log = "0.4"

# rfd = { version="0.12.1",  default-features = false, features = ["xdg-portal"]}

[target.'cfg(any(not(target_arch = "wasm32"), target_os = "emscripten"))'.dependencies]
simple_logger = "4.3"
