[package]
name = "vent-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-runtime = { path = "../vent-runtime"}
vent-common = { path = "../vent-common"}

vent-rendering = { path = "../vent-rendering"}

ash = { version= "0.38", default-features = false, features = ["linked"] }

pollster = "0.3.0"

log = "0.4"

# rfd = { version="0.12.1",  default-features = false, features = ["xdg-portal"]}

