[package]
name = "vent-logging"
version.workspace = true
edition.workspace = true

[dependencies]
log = { version="0.4", features = ["std"] }
colored = "2.1.0"

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.69", features = ["console"] }

[target.'cfg(target_os = "android")'.dependencies] 
ndk-sys = "0.6"