[package]
name = "vent-rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-window = { path= "../vent-window"}
ash = { version= "0.38", default-features = false, features = ["linked", "debug", "std"] }
spirv = "0.3.0"

ordered-float = "4.2.0"

image = "0.25"

raw-window-handle = "0.6"
log = "0.4"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.4"
