[package]
name = "vent-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-common = { path = "../vent-common"}
vent-rendering = { path = "../vent-rendering"}
vent-assets = { path = "../vent-assets" }
vent-ecs = { path = "../vent-ecs"}

ash = { version= "0.38", default-features = false, features = ["linked", "debug"] }

winit = "0.29"
pollster = "0.3.0"
log = "0.4"

glam = "0.27"
downcast-rs = "1.2.0"

# egui
egui = "0.27"
egui-winit = "0.27"

[target.'cfg(any(not(target_arch = "wasm32"), target_os = "emscripten"))'.dependencies]
simple_logger = "4.3"


[build-dependencies]
fs_extra = "1.3.0"
