[package]
name = "vent-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-common = { path = "../vent-common"}
vent-rendering = { path = "../vent-rendering"}
vent-assets = { path = "../vent-assets" }
vent-ecs = { path = "../vent-ecs"}
vent-window = { path = "../vent-window"}
vent-logging = { path = "../vent-logging"}

ash = { version= "0.38", default-features = false, features = ["linked", "debug"] }

pollster = "0.3.0"
log = "0.4"

glam = "0.28"
downcast-rs = "1.2.0"

# egui
egui = "0.27"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
android-activity = { version = "0.6", features = [ "game-activity" ] }
ndk = "0.9.0"


[build-dependencies]
fs_extra = "1.3.0"
