[package]
name = "vent-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vent-rendering = { path = "../vent-rendering"}
vent-ui = { path = "../vent-ui"}
vent-assets = { path = "../vent-assets" }
vent-ecs = { path = "../vent-ecs"}
vent-window = { path = "../vent-window"}
vent-logging = { path = "../vent-logging"}
vent-math = { path = "../vent-math"}

# Rendering
ash = { version= "0.38", default-features = false }

pollster = "0.3.0"
log = "0.4"

image = "0.25"

sysinfo = "0.31"
chrono = "0.4"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

downcast-rs = "1.2.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
android-activity = { version = "0.6", features = [ "game-activity" ] }
ndk = "0.9.0"
