[package]
name = "vent-ui"
version.workspace = true
edition.workspace = true

[dependencies]
vent-rendering = { path = "../vent-rendering"}
vent-math = { path = "../vent-math"}
ash = { version= "0.38", default-features = false }

log = "0.4"

ab_glyph = { version = "0.2.28" }
# cosmic-text = "0.12"
image = "0.25"

