[package]
name = "vent-window"
version.workspace = true
edition.workspace = true

[features]
default = ["wayland"]
wayland = [
    "wayland-client",
    "wayland-backend",
    "wayland-protocols",
    "wayland-protocols-plasma",
    "wayland-protocols-wlr",
    "wayland-scanner",
    "wayland-csd-frame"
]

[dependencies]
rwh_06 = { package = "raw-window-handle", version = "0.6", features = [
    "std",
]}



[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies]
wayland-backend = { version = "0.3.0", features = ["client_system"], optional = true }
wayland-client = { version = "0.31.2", optional = true }
wayland-protocols = { version = "0.31.0", features = [
    "client", "staging", "unstable",
], optional = true }
wayland-protocols-plasma = { version = "0.2.0", features = [
    "client",
], optional = true }
wayland-protocols-wlr = { version = "0.2.0", features = ["client"], optional = true }
wayland-scanner = {version=  "0.31.0", optional = true }
wayland-csd-frame = { version= "0.3.0", optional = true }